[project]
name = "streamlit-youtube-video-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datetime>=5.5",
    "matplotlib>=3.10.3",
    "numpy>=2.1.3",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "requests>=2.32.4",
    "streamlit>=1.46.0",
    "tensorflow>=2.19.0",
    "textblob>=0.19.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.52.4",
    "vadersentiment>=3.3.2",
    "wordcloud>=1.9.4",
]
